fix: mobile footer text aligned to centre

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -626,8 +626,7 @@ section {
 }
 
 #footer .copyright {
-    /* text-align: center; */
-    margin-left: 2em;
+    text-align: center;
 }
 
 @media (max-width: 1199px) {
